# rust_wasm_sdl_testing

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  index.html  package-lock.json  package.json  webpack.config.js
assets/: keybind.txt  sprite.vs  sprite.yml
assets/instrument/: test.yml
data/assets/: sprite.fs  sprite.yml
data/assets/instrument/: test.yml
data/cfg/: imgui.ini  window.yml
dylibtest/: Cargo.toml
dylibtest/src/: lib.rs
src/: cargo_web_init.js  emscripten_runtime.js  game_of_life.rs  index.js  main.rs  renderer.rs
src/css/: style.css
src/game/: Cargo.toml  Web.toml
src/game/src/: Oscilator_Type.rs  emscripten.rs  key.rs  main.rs  noise.rs  periodical_wave.rs  synth.rs  utils.rs
src/game/src/synth/: audio_callback.rs  envelop.rs  key.rs  mod.rs  periodical_wave.rs  renderer.rs
src/platform/: application.rs  emscripten.rs  io.rs  mod.rs
src/render/: gl_utils.rs  mod.rs  scene.rs  sprite.rs  text.rs
src/square_wave_test/: Cargo.toml  Web.toml
src/square_wave_test/src/: main.rs
src/synth/: audio_callback.rs  envelop.rs  instrument.rs  key.rs  mod.rs  noise.rs  note.rs  periodical_wave.rs
src/ui/: mod.rs
src/utils/: mod.rs
