[package]
name = "rust-app"
version = "0.1.0"
authors = ["Oropiko <nope@nopemail.nope>"]

[dependencies]
rand = "*"
gl = "*"
serde = "*"
serde_derive = "*"
serde_yaml = "*"
imgui = "*"
imgui-sdl2 = "*"
imgui-opengl-renderer = "*"

[dependencies.sdl2]
version = "0.31"
default-features = false
features = ["ttf", "image"]

[features]
ttf = []
