[package]
name = "rust-app"
version = "0.1.0"
authors = ["Oropiko <nope@nopemail.nope>"]

[dependencies]
rand = "*"
gl = "*"
serde = "*"
serde_derive = "*"
serde_yaml = "*"
imgui = "*"
imgui-sdl2 = { version = "*", optional = true }
imgui-opengl-renderer = { path = "../rust-imgui-opengl-renderer" }
# physfs-rs = { git = "https://github.com/PistonDevelopers/physfs-rs" } # nightly required!
libloading = "*"

[dependencies.sdl2]
version = "0.31"
default-features = false
optional = true

[features]
default = ["sdl2", "imgui-sdl2"]

